--- a/LinuxShell.html
+++ b/LinuxShell.html
@@ -21,14 +21,14 @@
   <div class="iframe-container">
     
     
-<img src="1.PNG" alt="">
-<img src="2.PNG" alt="" >
-<img src="3.PNG" alt="" >
-<img src="4.PNG" alt="" >
-<img src="5.PNG" alt="" >
-<img src="6.PNG" alt="" >
-<img src="7.PNG" alt="" >
-<img src="8.PNG" alt="" >
+<img src="1.PNG" alt=""  width="500" height="333" >
+<img src="2.PNG" alt="" width="500" height="333" >
+<img src="3.PNG" alt="" width="500" height="333" >
+<img src="4.PNG" alt="" width="500" height="333" >
+<img src="5.PNG" alt="" width="500" height="333">
+<img src="6.PNG" alt="" width="500" height="333">
+<img src="7.PNG" alt="" width="500" height="333">
+<img src="8.PNG" alt="" width="500" height="333" >
 
 
   
