--- a/LinuxShell.html
+++ b/LinuxShell.html
@@ -21,14 +21,14 @@
   <div class="iframe-container">
     
     
-<img src="1.PNG" alt=""  width="500" height="333" > <br>
-<img src="2.PNG" alt="" width="500" height="333" > <br>
-<img src="3.PNG" alt="" width="500" height="333" ><br>
-<img src="4.PNG" alt="" width="500" height="333" ><br>
-<img src="5.PNG" alt="" width="500" height="333"><br>
-<img src="6.PNG" alt="" width="500" height="333"><br>
-<img src="7.PNG" alt="" width="500" height="333"><br>
-<img src="8.PNG" alt="" width="500" height="333" ><br>
+<img src="1.PNG" alt="" > <br><br>
+<img src="2.PNG" alt="" > <br><br>
+<img src="3.PNG" alt=""><br><br>
+<img src="4.PNG" alt=""  ><br><br>
+<img src="5.PNG" alt="" ><br><br>
+<img src="6.PNG" alt=""><br><br>
+<img src="7.PNG" alt="" ><br><br>
+<img src="8.PNG" alt=""><br><br>
 
 
   
