--- a/LinuxShell.html
+++ b/LinuxShell.html
@@ -53,7 +53,13 @@
 <center><div >
 <img src="8.PNG" alt="" width="700"><br><br>
 
-
+   <div >   <br> <center>9. </center> </div><br>
+<center><div >
+<img src="9.PNG" alt="" width="700"><br><br>
+  
+     <div >   <br> <center>10. </center> </div><br>
+<center><div >
+<img src="10.PNG" alt="" width="700"><br><br>
   
   
   
