--- a/LinuxShell.html
+++ b/LinuxShell.html
@@ -55,9 +55,10 @@
 
    <div >   <br> <center>9. </center> </div><br>
 <center><div >
-<img src="9.PNG" alt="" width="700"><br><br>
+<img src="9.PNG" alt="" width="700"></div></center><br><br>
   
      <div >   <br> <center>10. </center> </div><br>
+  
 <center><div >
 <img src="10.PNG" alt="" width="700"><br><br>
   
